--- a/package.json
+++ b/package.json
@@ -12,6 +12,16 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
+    "db:container:up": "docker compose  up -d",
+    "db:container:down": "docker compose down",
+    "db:migrate:dev": "npx prisma migrate dev",
+    "db:migrate:deploy": "npx prisma migrate deploy",
+    "db:migrate:reset": "npx prisma migrate reset --force",
+    "db:migrate": "npx prisma migrate dev deploy",
+    "db:generate": "npx prisma generate",
+    "db:studio": "npx prisma studio",
+    "db:seed": "tsc prisma/seed.ts && node prisma/seed.js",
+    "db:reset": "tsc prisma/reset.ts && node prisma/reset.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -23,6 +33,7 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@prisma/client": "^5.13.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
