--- a/package.json
+++ b/package.json
@@ -40,8 +40,11 @@
     "@nestjs/swagger": "^7.3.1",
     "@nestjs/terminus": "^10.2.3",
     "@prisma/client": "^5.13.0",
+    "argon2": "^0.40.1",
+    "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.6",
     "ioredis": "^5.4.1",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
