resolve Add auth routes #1

--- a/.env.sample
+++ b/.env.sample
@@ -7,3 +7,6 @@ DATABASE_NAME=db
 
 DATABASE_URL="postgresql://postgres:pass@localhost:5432/db?schema=public"
 REDDIS_URL="redis://localhost:6379"
+
+EMAIL_ADDRESS=
+EMAIL_PASSWORD= # pass app-password if 2FA is enabled
