--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.6",
     "ioredis": "^5.4.1",
+    "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^6.9.13",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
