--- a/package.json
+++ b/package.json
@@ -41,8 +41,10 @@
     "@nestjs/terminus": "^10.2.3",
     "@prisma/client": "^5.13.0",
     "argon2": "^0.40.1",
+    "bcrypt": "^5.1.1",
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.6",
+    "crypto": "^1.0.1",
     "ioredis": "^5.4.1",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.9.13",
